...
                                <rect key="frame" x="7.5" y="278.5" width="360" height="333.5"/>
                                <subviews>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="bordered" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="1iD-lp-COw">
                                        <rect key="frame" x="36" y="11" width="288" height="32"/>
                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                        <segments>
                                            <segment title="Set timer"/>
                                            <segment title="Pick date"/>
                                        </segments>
                                        <color key="tintColor" red="0.18866634369999999" green="0.55137991909999995" blue="0.70128864049999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <connections>
                                            <action selector="clickPickerSwitch:" destination="1B3-Tu-UyM" eventType="valueChanged" id="2gO-QP-qBT"/>
                                        </connections>
                                    </segmentedControl>
...
                                    </datePicker>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G5L-8r-5EK">
                                        <rect key="frame" x="36" y="283.5" width="288" height="39"/>
                                        <color key="backgroundColor" red="0.18866634369999999" green="0.55137991909999995" blue="0.70128864049999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                        <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                        <state key="normal" title="SET"/>
                                        <connections>
                                            <action selector="clickCreateButton:" destination="1B3-Tu-UyM" eventType="touchUpInside" id="wkz-F0-Aof"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <rect key="frame" x="0.0" y="28" width="360" height="80"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wKf-Cq-iNI" id="pkH-OH-yqZ">
                                            <rect key="frame" x="0.0" y="0.0" width="360" height="80"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Data" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nl3-jG-hYz">
                                                    <rect key="frame" x="148.5" y="29.5" width="63" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
                                    <constraint firstItem="PFk-jp-F2s" firstAttribute="centerY" secondItem="7xS-W6-nI7" secondAttribute="centerY" id="xBB-9B-eSC"/>
                                    <constraint firstItem="nxk-pq-bIQ" firstAttribute="centerY" secondItem="7xS-W6-nI7" secondAttribute="centerY" id="zFK-WB-BpG"/>
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timer is running" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tjx-QC-ITC">
                                <rect key="frame" x="7.5" y="495" width="360" height="36"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="30"/>
                                <color key="textColor" red="0.18866634369999999" green="0.55137991909999995" blue="0.70128864049999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nsq-Fr-Uhr" userLabel="NavigateButton">
                                <rect key="frame" x="307.5" y="62" width="49" height="49"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <color key="backgroundColor" red="0.18866634369999999" green="0.55137991909999995" blue="0.70128864049999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="61" id="3ad-YD-Akg"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="61" id="vQh-Ir-u3H"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                <state key="normal" title="I'm Here">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="clickDoneButton:" destination="wff-YY-Rkr" eventType="touchUpInside" id="nQf-u9-wok"/>
                                </connections>
                            </button>
...
