...
            return true
        }
    }
    
    func checkCameraPresent() {
        if !isCameraAvailable! {
            let alert = UIAlertController(title: "No Camera", message: "Camera hardware unavailable", preferredStyle: .alert)
            alert.addAction(UIAlertAction(title: "Dismiss", style: .default, handler: nil))
            self.present(alert, animated: true)
            self.ibCameraButton.isEnabled = false
        }
    }

    @IBAction func clickCameraButton(_ sender: UIButton) {
...
