//
//  Constants.swift
//  Parkiminder Beta
//
//  Created by dading on 16/10/19.
//  Copyright © 2019 COMP90019. All rights reserved.
//

import Foundation

enum constantString: String {
    case keyUserDefaults = "RUNNING_COUNTDOWN"
    case entityNameReminder = "Reminder_CD"
    case imageUnavailable = "IMAGE_NOT_AVAILABLE"
    case historyGroup1 = "This Month"
    case historyGroup2 = "Last 3 Months"
    case historyGroup3 = "More"
    case attributeCreatedTime = "createdTime_Date"
    case attributeDescription = "description_String"
    case attributeDueTime = "dueTime_Date"
    case attributeImageURL = "imageurl_String"
    case attributeLatitude = "latitude_Double"
    case attributeLongitude = "longitude_Double"
}
