...
    @IBAction func clickDismissButton(_ sender: UIButton) {
        dismiss(animated: true, completion: nil)
    }
    
    @IBAction func clickClearButton(_ sender: UIButton) {
        let alert = UIAlertController(title: "Clear captured image?", message: "This will delete all previously captured image.", preferredStyle: .alert)
        //        alert.addAction(UIAlertAction(title: "Yes", style: .default, handler: nil))
        alert.addAction(UIAlertAction(title: "Yes", style: .default, handler: { (action) in
            self.dismiss(animated: true) {
                self.callback_clearCapturedImage!()
            }
            
        }))
...
